# cuda-raycaster-v1

./: CMakeLists.txt  README.md  main.cu
include/: CudaError.hpp  Displayer.hpp  Error.hpp  IMaterial.hpp  IShape.hpp  cudaHelpers.h
include/inputs/: Keyboard.hpp  Mouse.hpp
include/materials/: PhongMaterial.hpp
include/math/: Matrix.cuh  Matrix2.cuh  Matrix3.cuh  RGB.cuh  Ray.cuh  Ray.hpp  Vec3.cuh  Vec3.hpp
include/parsing/: ObjParser.hpp  Parser.hpp
include/render/: Renderer.cuh  Renderer.hpp  rendererData.h
include/shapes/: ObjShape.hpp  Triangle.cuh  Triangle.hpp
src/: Displayer.cu  cudaHelpers.cu  main.cu
src/inputs/: Keyboard.cpp  Mouse.cpp
src/parsing/: ObjParser.cu  Parser.cu
src/render/: Renderer.cu  render.cu
src/shapes/: ObjShape.cu  Triangle.cpp  Triangle.cu
